# isistools

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: _quarto.yml  cam2map.qmd  cnet-info.qmd  csm2map-design.md  csm2map.qmd  ctxpipe.qmd  footprintinit.qmd  footprints.qmd  hirisepipe.qmd  index.qmd  mosaic.qmd  python-api.qmd  styles.css  tiepoints.qmd
docs/plans/: gpu-acceleration.md  hybrid-pattern-prototype.md  isis-migration.qmd
scripts/: benchmark_csm2map.sh  build_csmapi.sh  conda_install_deps.sh  csm_research.md  disagreement_analysis.md  isis_sandbox_fix.md  rerun_footprintinit.sh  test_cam2map_comparison.sh  test_csm2map_comparison.sh  verify_cnet_coords.sh
src/isistools/: __init__.py  cli.py  findfeatures.py  special_pixels.py  spice_utils.py
src/isistools/apps/: __init__.py  components.py  mosaic_review.py  tiepoint_review.py
src/isistools/csm2map/: __init__.py  camera.py  cli.py  compare.py  dem.py  grid.py  pipeline.py  projections.py  resample.py  tiled.py  transform.py  writers.py
src/isistools/ctxpipe/: __init__.py  calibrate.py  cli.py  evenodd.py  ingest.py  pipeline.py  spice_utils.py
src/isistools/geo/: __init__.py  projections.py
src/isistools/hirisepipe/: __init__.py  cubenorm.py  hical.py  ingest.py  pipeline.py  stitch.py
src/isistools/io/: __init__.py  cache.py  controlnet.py  cubes.py  footprints.py  overlaps.py
src/isistools/plotting/: __init__.py  cnet_overlay.py  footprint_map.py  footprint_mpl.py  image_viewer.py  styles.py
src/isistools/processing/: __init__.py  camera.py  dem.py  grid.py  project.py  resample.py  transform.py  writers.py
tests/: test_cli.py  test_ctxpipe.py  test_findfeatures.py  test_hirisepipe.py  test_io.py  test_latlon_conventions.py  test_processing.py  test_target_body.py
