[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isistools"
dynamic = ["version"]
description = "Python-based review tools for ISIS3 coregistration workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Michael Aye" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "geopandas>=0.14",
    "holoviews>=1.18",
    "hvplot>=0.9",
    "datashader>=0.16",
    "panel>=1.3",
    "bokeh>=3.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "plio>=1.5",
    "pvl>=1.3",
    "shapely>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "typer>=0.9",
    "matplotlib>=3.7",
    "mplcursors>=0.5",
    "kalasiris>=1.11",
    "PyQt6>=6.5",
    "diskcache>=5.6",
]

[project.urls]
Homepage = "https://github.com/michaelaye/isistools"
Repository = "https://github.com/michaelaye/isistools"
Changelog = "https://github.com/michaelaye/isistools/blob/main/CHANGELOG.md"
Issues = "https://github.com/michaelaye/isistools/issues"

[project.optional-dependencies]
## CSM deps (csm2map) — install via conda, not pip:
##   conda install -c conda-forge usgscsm ale rasterio rich
csm = [
    "scipy>=1.10",
    "pyproj>=3.4",
    "rich>=12.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
isistools = "isistools.cli:app"

[tool.hatch.version]
path = "src/isistools/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/isistools"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (requires external test data; deselect with -m 'not slow')",
]
